# crud_ml

./: README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  crud.py  database.py  main.py  models.py  router.py  schema.py
frontend/: Dockerfile  requirements.txt  streamlit_app.py
